# battleship_challenge

./: .gitignore  README.md  outline.md  pyproject.toml  roosafelixbot.py  test_tournament.conf  tournament.conf
src/battleship_challenge/: bot_validator.py  game.py  interface.py  main.py  tournament.py  tournament_cli.py  visualization.py
src/battleship_challenge/bots/: __init__.py  adaptivemetabot2_bot.py  failing_bot.py  probabilitysmartbotwithplacement.py  random_bot.py  random_bot_two.py  roosafelixbot.py
tests/: test_bot_validator.py  test_game.py  test_main.py  test_tournament.py
