[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "battleship_challenge"
version = "0.1.0"
description = "A battleship game challenge implementation"
authors = [
    {name = "Matthew Livesey", email = "matt@mjlivesey.co.uk"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.scripts]
battleship_challenge = "battleship_challenge.main:main"
battleship_tournament = "battleship_challenge.tournament_cli:main"
battleship_validate = "battleship_challenge.bot_validator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"